// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Page Component renders correctly with title 1`] = `
<Page
  empty={Object {}}
  pass="through"
  title="test title"
/>
`;

exports[`Signals Page Component renders with default title 1`] = `
<Page
  empty={Object {}}
  pass="through"
  title="Signals"
/>
`;
